--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "slugify-from-richtext",
-  "version": "0.0.0",
-  "description": "This is the description of the plugin.",
+  "name": "@lucchev/strapi-plugin-slugify-from-richtext",
+  "version": "1.0.1",
+  "description": "Adding a custom field of type string, which is populated from another field of type 'richText'",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lucchev/strapi-plugin-slugify-from-richtext.git"
+  },
   "strapi": {
-    "name": "slugify-from-richtext",
-    "description": "Description of slugify-from-richtext plugin",
+    "name": "strapi-plugin-slugify-from-richtext",
+    "displayName": "Slugify From RichText",
+    "description": "Custom field of type string",
     "kind": "plugin"
   },
   "dependencies": {
